# ha-everhome

./: .coverage  .gitignore  .release-please-config.json  AGENT_SYSTEM_PROMPT.md  CHANGELOG.md  CLAUDE.md  README.md  coverage.xml  hacs.json  mypy.ini  pyproject.toml  requirements_test.txt
.github/workflows/: auto-merge.yml  auto-pr.yml  auto-release.yml  hacs-validation.yml  hassfest.yml  release-please.yml  release.yml  test.yml
.kiro/specs/binary-sensors/: design.md  requirements.md  tasks.md
.kiro/specs/light/: design.md  requirements.md  tasks.md
.kiro/specs/switch/: design.md  requirements.md  tasks.md
custom_components/everhome/: __init__.py  api.py  application_credentials.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  cover.py  light.py  manifest.json  strings.json  switch.py
docs/: expansion-opportunities.md
scripts/: setup-dev.sh  test.sh
tests/: __init__.py  conftest.py  test_api.py  test_application_credentials.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_cover.py  test_init.py  test_light.py  test_switch.py
